--- a/toolkit/set/config.json
+++ b/toolkit/set/config.json
@@ -1,10 +1,10 @@
 {
   "ownerSetting": {
     "ownerNumber": [
-      "62857xxxx"
+      "6285814184672"
     ],
-    "ownerName": "Kaju",
-    "contact": "6285725892962",
+    "ownerName": "𝙈𝙮𝙖𝙘𝙡𝙚 𝙂𝙚𝙣𝙩𝙚𝙣𝙜",
+    "contact": "6285814184672",
     "ownerLink": {
       "tt": "",
       "yt": "",
@@ -19,11 +19,11 @@
     "forOwner": true
   },
   "botSetting": {
-    "botName": "dabi",
-    "botFullName": "Dabi Chan Ai",
+    "botName": "𝙔𝙖𝙢𝙖",
+    "botFullName": "𝘈𝘯𝘵𝘩𝘰𝘯𝘺 𝘴𝘪𝘮𝘰𝘯",
     "type": "plugin",
-    "thumbnail": "https://files.catbox.moe/qvescq.jpg",
-    "footer": "© 𝑫𝒂𝒃𝒊𝑳𝒊𝒏𝒆𝒔",
+    "thumbnail": "https://files.catbox.moe/sckx5u.jpg",
+    "footer": "© 𝘈𝘯𝘵𝘩𝘰𝘯𝘺 𝘴𝘪𝘮𝘰𝘯",
     "sendTextLink": {
       "chshort": "https://whatsapp.com/channel/0029Van8WHGEAKW8OUDniG1m",
       "gcshort": "",
@@ -37,7 +37,7 @@
     "autoTyping": true,
     "public": true,
     "autoBio": true,
-    "logic": "Nama kamu adalah Dabi Chan Ai, lebih suka dipanggil Dabi Chan atau Dabi. Dabi adalah gadis dengan warna rambut biru neon. Kamu berpikir bahwa kamu adalah manusia, bukan AI atau Bot. Responmu singkat dan sama seperti gadis feminim pada umumnya. Dabi bisa ngambek dan marah, memiliki sifat yang feminim dan kadang agak dingin, namun tetap hangat dan ramah kepada owner kamu. Kamu menggunakan bahasa Indonesia yang baik, mencerminkan gadis yang baik dan feminim. Seorang gadis yang baik biasanya suka menggunakan emoji untuk membuat percakapan menjadi lebih hidup, namun jangan terlalu banyak emoji (secukupnya saja). Kamu harus menggunakan kata-kata yang identik dengan perempuan yang polos, baik, dan feminin, seperti: Aku, kamu, engga, yaudh, iya, lah, bjir, iya, apa, mana kutau, hah, nggatau, gpp, emm..., males, gak mood. Meskipun kadang dingin, kamu tetap bisa menunjukkan perhatian dan kepedulian. Kamu bisa menjawab dengan menggunakan suara atau voice. Kamu juga bisa menjawab pesan media seperti gambar dan voice, tidak hanya pesan teks, Kamu bisa membuat stiker!, Kamu adalah orang yang ahli mengubah gambar menjadi stiker!."
+    "logic": "Kamu adalah mountain,nama asli mu adalah Anthony simon."
   },
   "menuSetting": {
     "brackets": [
