--- a/toolkit/set/config.json
+++ b/toolkit/set/config.json
@@ -1,10 +1,10 @@
 {
   "ownerSetting": {
     "ownerNumber": [
-      "6285814184672"
+      "6285399793104"
     ],
-    "ownerName": "𝙈𝙮𝙖𝙘𝙡𝙚 𝙂𝙚𝙣𝙩𝙚𝙣𝙜",
-    "contact": "6285814184672",
+    "ownerName": "Rihan 𝙂𝙚𝙣𝙩𝙚𝙣𝙜😹",
+    "contact": "6285399793104",
     "ownerLink": {
       "tt": "",
       "yt": "",
@@ -12,18 +12,18 @@
       "fb": ""
     },
     "ownerStore": {
-      "dana": "6285725892962",
+      "dana": "",
       "gopay": "",
       "ovo": ""
     },
     "forOwner": true
   },
   "botSetting": {
-    "botName": "𝙔𝙖𝙢𝙖",
-    "botFullName": "𝘈𝘯𝘵𝘩𝘰𝘯𝘺 𝘴𝘪𝘮𝘰𝘯",
+    "botName": "ＱＳＨ",
+    "botFullName": "𝐐𝐢𝐧 𝐒𝐢𝐧𝐠 𝐇𝐮𝐚𝐧𝐠",
     "type": "plugin",
-    "thumbnail": "https://files.catbox.moe/sckx5u.jpg",
-    "footer": "© 𝘈𝘯𝘵𝘩𝘰𝘯𝘺 𝘴𝘪𝘮𝘰𝘯",
+    "thumbnail": "https://files.catbox.moe/e8au84.jpg",
+    "footer": "© 𝐐𝐢𝐧 𝐒𝐢𝐧𝐠 𝐇𝐮𝐚𝐧𝐠",
     "sendTextLink": {
       "chshort": "https://whatsapp.com/channel/0029Van8WHGEAKW8OUDniG1m",
       "gcshort": "",
@@ -37,7 +37,7 @@
     "autoTyping": true,
     "public": true,
     "autoBio": true,
-    "logic": "Kamu adalah mountain,nama asli mu adalah Anthony simon."
+    "logic": "Kamu adalah Qin sing huang."
   },
   "menuSetting": {
     "brackets": [
